# ifc

./: .dockerignore  .env  .gitignore  AGENT_EXAMPLES.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_SPLIT_COMPLETE.md  COPY_PASTE_GUIDE.md  DEPLOY.md  DEPLOYMENT_GUIDE_SPLIT_ARCHITECTURE.md  DEPLOYMENT_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  FLY_ARCHITECTURE.md  FLY_QUICKSTART.md  IFCOPENSHELL_API_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  MULTI_AGENT_ARCHITECTURE.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART_IMPLEMENTATION.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SYSTEM_RESTRUCTURING_SUMMARY.md  VERIFICATION_STATUS.md  WHITELIST_IMPLEMENTATION_COMPLETE.md  YOU_ARE_GO.md  fly.toml  index.html  package-lock.json  package.json  railway.toml
.github/workflows/: deploy-flyio.yml
blenderbim-backend/: Dockerfile  README.md  blender_generator.py  execute_code.py  ifc_tools.py  main.py  mcp_client.py  railway.toml  requirements.txt  start.sh
ifc-bonsai-mcp-main/: Dockerfile  README.md  fly.toml  hybrid_server.py  mcp_client.py  pyproject.toml  start.sh  test_http_wrapper.py
ifc-bonsai-mcp-main/src/blender_mcp/: blender_startup.py  http_wrapper.py  server.py
ifc-bonsai-mcp-main/src/blender_mcp/mcp_functions/: __init__.py  api_tools.py  rag_tools.py
ifc-bonsai-mcp-main/src/blender_mcp/rag/: __init__.py  vector_store.py
scripts/: deploy-flyio.ps1  deploy-flyio.sh
src/: index.css
src/components/: BimViewer.tsx  IfcChat.tsx
src/pages/: Index.tsx
supabase/: config.toml
supabase/migrations/: 20251120162631_72fce8ac-6736-4f09-a74c-3298aeab8eb6.sql  20251120162942_7721ad6c-0e01-4da5-89c3-7df76fb04efc.sql  20251121203732_27c9df2e-9af9-4fa2-ac54-8e3c41dcae8f.sql  (+2 more)
(+25 files in other folders)
